@@ -1,3 +1,10 @@
+2006-01-18  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmark-properties.c
+	
+	Removed inappropriate bold and mnemonic.
+	Bug #327401.
+
 2006-01-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/prefs-dialog.c: (row_is_separator), (setup_fonts_dialog),
